# SlackAgents

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Makefile
app/code-interpreter/: .env.example  README.md  app.py  config.yaml  requirements.txt
app/customer-service-team/: run_customer_agent.py  test.py
app/delete_slack_history/: delete_channel_hist.py
app/quarterly-checkin/: README.md  app.py  config.yaml  requirements.txt
app/slack_assistant/: simpleoai.py  slack_bolt_id.py
app/slack_channel_team/: .example.slack_bolt_id.py  mix_handler.py  simple_agent_chat.py
app/video-search-and-summarize/: README.md  requirements.txt  run.py  test.py
app/your_first_slack_assistant/: .example.slack_bolt_id.json  agent_config.json  create_slack_app.py  example_manifest.json  my_agent.py  slack_bolt_id.py
examples/agent/: agent_for_paper_abstract_drafting.ipynb  agent_for_video_searching_and_summarization.ipynb  code_interpreter_agent.ipynb  workflow_for_employee_quaterly_checkins.ipynb  workflow_for_newhire_onboarding.ipynb
examples/llms/: openai.ipynb
examples/slack_agent/: build_app_with_manifest.ipynb  (+2 more)
sandbox/: .env.example  Dockerfile  README.md  app.py  environment.py  requirements.txt  schemas.py
scripts/: tests.sh
tests/: pyproject.toml
tests/agents/: test_assistant.py  test_executor.py  test_workflow_agent.py
tests/data/tools/: bland_ai.json
tests/graph/: test_execution_graph.py
tests/llms/: test_openai.py
tests/tools/: test_base_tool.py  test_function_definition.py  test_function_tool.py  test_openapi_tool.py  test_tool_call.py
(+39 files in other folders)
